--- a/src/main/webapp/MainUI/lib/form/search.css
+++ b/src/main/webapp/MainUI/lib/form/search.css
@@ -1,6 +1,7 @@
 .card-section-imagia{
     padding:60px 0 30px;
-    background:#f1f1f1
+    background:#f1f1f1;
+    min-height: 1000px;
 }
 .card-section-imagia>h1{
     font-size:48px;
