Update UI : search + doctorProfile(unfinished)

--- a/src/main/webapp/lib/form/search.css
+++ b/src/main/webapp/lib/form/search.css
@@ -1,4 +1,3 @@
-
 .card-section-imagia{
     padding:60px 0 30px;
     background:#f1f1f1;
@@ -22,7 +21,7 @@
     -moz-perspective:1500px;
     -o-perspective:1500px;
     perspective: 1500px;
-    margin-bottom:30px
+    margin-bottom:30px;
 }
 .card-container-imagia:hover .card-imagia{
     -webkit-transform:rotateY(180deg);
@@ -70,14 +69,17 @@
 .card-imagia .cover-imagia{
     height:120px;
     overflow:hidden;
-    border-radius:4px 4px 0 0}
+    border-radius:4px 4px 0 0;
+    background-color: #18d26e;
+}
+    
 .card-imagia .cover-imagia img{
     width:100%;
     height:auto
 }
 .card-imagia .cover-imagia.cover-gradient{
     background:#fff;
-    background-image:radial-gradient(circle at 50% 100% ,#ADCACE 0,#89BECE 33%,#34A1C8 66%,#036EAD 100%) 
+    background-image: radial-gradient(circle at 50% 100% ,#ADCACE 0,#89BECE 33%,#34A1C8 66%,#036EAD 100%) 
 }
 .card-imagia .user-imagia{
     border-radius:50%;
@@ -86,7 +88,7 @@
     margin:-65px auto 0;
     overflow:hidden;
     width:120px}
-.card-imagia .user-imagia img{
+.card-imagia .user-imagia img-circle{
     background:#FFF;
     border:5px solid #FFF;
     width:100%
@@ -94,24 +96,44 @@
 .card-imagia .content-imagia{
     background-color:rgba(0,0,0,0);
     box-shadow:none;
-    padding:10px 20px 20px
+    padding:10px 20px 20px;
+    font-size: 16px;
 }
 .content-back-imagia{
     display:flex;
-    align-items:center;
-    height:100%
+    margin-top: 20px;
+    height:100%;
+   
 }
+
+.footer-imagia input.card-button {
+  text-align: center;
+  background: #18d26e;
+  border: 0;
+  padding: 10px 30px;
+  color: #fff;
+  transition: 0.4s;
+  cursor: pointer;
+  margin-bottom: 10px;
+}
+
+.footer-imagia input.card-button:hover{
+  background: #13a456;
+}
+
 .card-imagia .name-imagia{
-    font-size:22px;
+    font-size:20px;
+    font-weight: 500;
     line-height:26px;
-    argin:0;
+    margin:0;
     text-align:center;
-    text-transform:capitalize
+    text-transform: capitalize;
 }
 .card-imagia .subtitle-imagia{
     color:#aaa;
     text-align:center;
-    margin-bottom:15px
+    margin-bottom:15px;
+    margin-top: 5px;
 }
 .card-imagia .footer-imagia{
     width:100%;
@@ -124,7 +146,10 @@
 }
 .card-imagia .footer-imagia .social-imagia a{
     margin:0 7px;
-    font-size:18px
+    font-size:16px
+}
+.card-imagia .footer-imagia .social-imagia:hover{
+    text-decoration: underline;
 }
 @media screen and (-ms-high-contrast:active),(-ms-high-contrast:none)
 {
@@ -143,19 +168,25 @@
         z-index:5;
         visibility:visible}
 }
-.nothing-special {
+.nothing-special-dark {
     height: 90px;
     width: 100%;
     background-color: #000;
 }
-.search-keyword {
+.nothing-special-light {
+    height: 40px;
+    width: 100%;
+    background-color: #fff;
+}
+
+.search-field {
+    background-color: #9aa0a2;
     height: 70px;
-    width: 100%;    
+    color: #fff;
+    padding: 20px 100px;
 }
-.keyword {
-    font-size: 20px;
-    margin-left: 5%;
-    padding-top: 20px;
-    font-weight: 500;
+.search-field .h4 {
+    padding-top: 30px;
 }
+
 
