--- a/src/main/webapp/lib/form/sidebar.css
+++ b/src/main/webapp/lib/form/sidebar.css
@@ -49,7 +49,7 @@ body.offcanvas #fh5co-aside {
     z-index: 999;
     position: fixed;
 }
-body.offcanvas #fh5co-main, body.offcanvas .side-nav-toggle {
+body.offcanvas #fh5co-main, body.offcanvas .fh5co-nav-toggle {
     top: 0;
     -moz-transform: translateX(270px);
     -webkit-transform: translateX(270px);
