--- a/src/main/webapp/css/modal.css
+++ b/src/main/webapp/css/modal.css
@@ -93,10 +93,10 @@ and open the template in the editor.
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    margin-top: 60px;
+    margin-top: 30px;
 }
 .brand .success-msg p {
-    font-size: 25px;
+    font-size: 35px;
     font-weight: 400;
     font-family: "Raleway", sans-serif;
 }
@@ -108,6 +108,9 @@ and open the template in the editor.
     text-decoration: none;
     color: #fff;
     border-radius: 30px;
+}
+.success-btn {
+    padding-bottom: 20px;
 }
 .brand .success-msg p, .brand .success-msg a {
     transition: all 0.9s;
