--- a/src/main/webapp/lib/form/appointment.css
+++ b/src/main/webapp/lib/form/appointment.css
@@ -35,9 +35,48 @@ and open the template in the editor.
     width: 30%;
     height:40px;
     border: 1px solid #eee;
-    background-color: #fcfcfc;  
+    background-color: #fcfcfc;
+    padding-left: 5px;
 }
 .appointment .input:focus {
     background-color: #fff;
     border: 1px solid #18d26e;
+}
+.appointment .selectinput {
+    background-color: #fcfcfc;  
+    width: 10%;
+    padding-left: 5px;
+}
+.appointment .selectinput:focus {
+    background-color: #fff;  
+    border: 1px solid #18d26e;
+}
+.appointment .selectspec {
+    background-color: #fcfcfc;  
+    width: 30%;
+    height: 40px;
+    padding-left: 5px;
+}
+.appointment .selectspec:focus {
+    background-color: #fff;  
+    border: 1px solid #18d26e;
+}
+.appointment input.submition {
+    text-align: center;
+    background: #18d26e;
+    border: 0;
+    padding: 10px 30px;
+    color: #fff;
+    transition: 0.4s;
+    cursor: pointer;
+    margin-bottom: 10px;
+    margin-top: 30px;
+    width: 30%;
+    border-radius: 10px;
+}
+.appointment .error{
+    color:red;  
+}
+.appointment input.submition:hover {
+    background: #13a456;
 }
