--- a/src/main/webapp/lib/form/form.css
+++ b/src/main/webapp/lib/form/form.css
@@ -1,27 +1,34 @@
 .login-dark {
-  height:1000px;
-  background:#475d62 url(../../img/about-bg.jpg);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+    height:1000px;
+    background:#475d62 url(../../img/about-bg.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
+
+#title {
+    font-size: 2.5rem;
+    text-align: center;
+    margin-bottom: 50px;
+}
+
 /* Khac */
 .login-dark .login{
-  max-width:400px;
-  width:90%;
-  background-color:#1e2833;
-  padding:40px;
-  border-radius:4px;
-  transform:translate(-50%, -50%);
-  position:relative;
-  top:50%;
-  left:50%;
-  color:#fff;
-  box-shadow:3px 3px 4px rgba(0,0,0,0.2);
+    max-width:400px;
+    width:90%;
+    background-color:#1e2833;
+    padding:40px;
+    border-radius:4px;
+    transform:translate(-50%, -50%);
+    position:relative;
+    top:50%;
+    left:50%;
+    color:#fff;
+    box-shadow:3px 3px 4px rgba(0,0,0,0.2);
 }
 .login-dark .register{
     max-width:500px;
-    margin-top: 2%;
+    margin-top: 4%;
     width:90%;
     background-color:#1e2833;
     padding:40px;
@@ -32,38 +39,48 @@
     left:50%;
     color:#fff;box-shadow:3px 3px 4px rgba(0,0,0,.2)
 }
-.login-dark .reset{
-  max-width:400px;
-  width:90%;
-  background-color:#1e2833;
-  padding:40px;
-  border-radius:4px;
-  transform:translate(-50%, -50%);
-  position:relative;
-  top:50%;
-  left:50%;
-  color:#fff;
-  box-shadow:3px 3px 4px rgba(0,0,0,0.2);
+
+#name-status {
+    margin: 0 60% 0 0;
 }
+
+.login-dark .reset{
+    max-width:400px;
+    width:90%;
+    background-color:#1e2833;
+    padding:40px;
+    border-radius:4px;
+    transform:translate(-50%, -50%);
+    position:relative;
+    top:50%;
+    left:50%;
+    color:#fff;
+    box-shadow:3px 3px 4px rgba(0,0,0,0.2);
+}
+
+.login-dark .login .form-check-inline label {
+    margin-right: 10px;
+}
+
 /* Khong can */
 .login-dark .illustration {
-  text-align:center;
-  padding:15px 0 20px;
-  font-size:100px;
-  color:#2980ef;
+    text-align:center;
+    padding:15px 0 20px;
+    font-size:100px;
+    color:#2980ef;
 }
 .login-dark .i2 {
-  text-align:center;
-  padding:15px 0 20px;
-  font-size: 100px;
-  transform: rotate(-135deg);
-  color:#fbdc47;
+    text-align:center;
+    padding:15px 0 20px;
+    font-size: 100px;
+    transform: rotate(-135deg);
+    color:#fbdc47;
 }
 .login-dark .i3 {
-  text-align:center;
-  padding:15px 0 20px;
-  font-size: 100px;
-  color:#fbdc47;
+    text-align:center;
+    padding:15px 0 20px;
+    font-size: 100px;
+    color:#fbdc47;
 }
 .login-dark .text {
     padding: 10px;
@@ -71,62 +88,62 @@
 }
 
 .login-dark form .form-control {
-  background:none;
-  border:none;
-  border-bottom:1px solid #434a52;
-  border-radius:0;
-  box-shadow:none;
-  outline:none;
-  color:inherit;
+    background:none;
+    border:none;
+    border-bottom:1px solid #434a52;
+    border-radius:0;
+    box-shadow:none;
+    outline:none;
+    color:inherit;
 }
 
 .login-dark form .btn-primary {
-  background:#18d26e;
-  border:none;
-  border-radius:4px;
-  padding:11px;
-  box-shadow:none;
-  margin-top:26px;
-  text-shadow:none;
-  outline:none;
+    background:#18d26e;
+    border:none;
+    border-radius:4px;
+    padding:11px;
+    box-shadow:none;
+    margin-top:26px;
+    text-shadow:none;
+    outline:none;
 }
 
 .login-dark form .btn-primary:hover, .login-dark form .btn-primary:active {
-  background:#13a456;
+    background:#13a456;
 }
 
 .login-dark form .btn-primary2 {
-  background:#2980ef;
-  border:none;
-  border-radius:4px;
-  padding:11px;
-  box-shadow:none;
-  margin-top:26px;
-  text-shadow:none;
-  outline:none;
-  color: #fff;
+    background:#2980ef;
+    border:none;
+    border-radius:4px;
+    padding:11px;
+    box-shadow:none;
+    margin-top:26px;
+    text-shadow:none;
+    outline:none;
+    color: #fff;
 }
 
 .login-dark form .btn-primary2:hover, .login-dark form .btn-primary2:active {
-  background:#195096;
+    background:#195096;
 }
 
 .login-dark form .forgot {
-  display:block;
-  text-align:center;
-  font-size:12px;
-  color:#6f7a85;
-  opacity:0.9;
-  text-decoration:none;
+    display:block;
+    text-align:center;
+    font-size:12px;
+    color:#6f7a85;
+    opacity:0.9;
+    text-decoration:none;
 }
 
 .login-dark form .forgot:hover, .login-dark form .forgot:active {
-  opacity:1;
-  text-decoration:none;
+    opacity:1;
+    text-decoration:none;
 }
 
 .login-dark form .btn-primary:active .btn-primary2:active{
-  transform:translateY(1px);
+    transform:translateY(1px);
 }
 /* Check validate form thoi */
 .login-dark form .warn {
@@ -135,24 +152,78 @@
 }
 /* Button find doctor */
 .dropdown-button {
-  background: #18d26e;
-  border: 0;
-  padding: 10px 30px;
-  color: #fff;
-  transition: 0.4s;
-  cursor: pointer;
-  margin-top: 10px;
+    background: #18d26e;
+    border: 0;
+    padding: 10px 30px;
+    color: #fff;
+    transition: 0.4s;
+    cursor: pointer;
+    margin-top: 10px;
 }
 
 .dropdown-button :hover {
-  background: #13a456;
+    background: #13a456;
 }
 /* Dropdown Search input */
 .dropdown-form {
-  width : 500px; 
+    width : 500px; 
 }
 .form-search {
-  margin-top: 15px;
-  margin-bottom: 10px;
-  padding: 10px ;
+    margin-top: 15px;
+    margin-bottom: 10px;
+    padding: 10px ;
+}
+.login-dark form .form-group #fname {
+    width: 200px;
+    margin: 0px 0px;
+}
+.login-dark form .form-group #lname {
+    width: 200px;
+    margin: 0px 10px;
+}
+
+@media (min-width: 1025px) and (max-width: 1280px) {
+    .login-dark .register{
+        max-width:500px;
+        margin-top: 30%;
+        width:90%;
+        background-color:#1e2833;
+        padding:40px;
+        border-radius:4px;
+        transform:translate(-50%,-50%);
+        position:absolute;
+        top:50%;
+        left:50%;
+        color:#fff;box-shadow:3px 3px 4px rgba(0,0,0,.2)
+    }
+}
+
+@media (max-width: 767px) {
+    #title {
+        font-size: 2rem;
+        margin-bottom: 0;
+    }
+
+    .login-dark .register {
+        max-width: 300px;
+        margin-top: 70%;
+        width:90%;
+        background-color:#1e2833;
+        padding:40px;
+        border-radius:4px;
+        transform:translate(-50%,-50%);
+        position:absolute;
+        top:50%;
+        left:50%;
+        color:#fff;box-shadow:3px 3px 4px rgba(0,0,0,.2)
+    }
+
+    .form-group #lname {
+        width: 200px;
+        margin: 15px 0 0 0;
+    }
+
+    .login-dark .register .form-group #email {
+        width: 200px;
+    }
 }
