--- a/src/main/webapp/lib/form/form.css
+++ b/src/main/webapp/lib/form/form.css
@@ -182,19 +182,9 @@
     margin: 0px 10px;
 }
 
-@media (min-width: 1025px) and (max-width: 1280px) {
+@media (max-width: 1280px) {
     .login-dark .register{
-        max-width:500px;
-        margin-top: 30%;
-        width:90%;
-        background-color:#1e2833;
-        padding:40px;
-        border-radius:4px;
-        transform:translate(-50%,-50%);
-        position:absolute;
-        top:50%;
-        left:50%;
-        color:#fff;box-shadow:3px 3px 4px rgba(0,0,0,.2)
+        margin-top: 15%;
     }
 }
 
